# GAMMA

./: .gitignore  CMakeLists.txt  README.md  gamma_compute_accuracy.py
dataset/Cross_ct/: frame_0_agent_1.txt  frame_0_agent_10.txt  frame_0_agent_11.txt  frame_0_agent_12.txt  frame_0_agent_13.txt  frame_0_agent_14.txt  frame_0_agent_15.txt  frame_0_agent_16.txt  frame_0_agent_17.txt  frame_0_agent_18.txt  frame_0_agent_19.txt  frame_0_agent_2.txt  frame_0_agent_3.txt  frame_0_agent_4.txt  frame_0_agent_5.txt  frame_0_agent_6.txt  frame_0_agent_7.txt  frame_0_agent_8.txt  frame_0_agent_9.txt  frame_103_agent_67.txt  frame_103_agent_85.txt  frame_105_agent_86.txt  frame_112_agent_68.txt  frame_112_agent_87.txt  frame_114_agent_88.txt  frame_114_agent_89.txt  frame_116_agent_81.txt  frame_117_agent_69.txt  frame_118_agent_90.txt  frame_118_agent_91.txt  frame_118_agent_92.txt  frame_119_agent_108.txt  frame_121_agent_93.txt  frame_129_agent_94.txt  frame_129_agent_95.txt  frame_12_agent_23.txt  frame_12_agent_24.txt  frame_12_agent_25.txt  frame_131_agent_109.txt  frame_133_agent_82.txt  (+171 more)
dataset/UTown/: frame_0_agent_0.txt  frame_100_agent_20.txt  frame_100_agent_21.txt  frame_100_agent_22.txt  frame_100_agent_23.txt  frame_100_agent_24.txt  frame_100_agent_25.txt  frame_100_agent_26.txt  frame_13_agent_5.txt  frame_13_agent_6.txt  frame_18_agent_7.txt  frame_18_agent_8.txt  (+41 more)
examples/: CMakeLists.txt
src/: Agent.cpp  Agent.h  AgentParams.h  CMakeLists.txt  ConvexHull.h  GammaParams.cpp  GammaParams.h  KdTree.h  Minkowski.h  RVOSimulator.cpp  RVOSimulator.h
(+1934 files in other folders)
